fix for scrollbar moving page

--- a/baknetworks/static/styles.css
+++ b/baknetworks/static/styles.css
@@ -14,7 +14,8 @@ body {
     font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
     line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
     
-    padding-bottom: 60px;
+    padding-bottom: 150px;
+    /* width: calc(100vw - 34px); */
 
   }
 
@@ -38,5 +39,6 @@ body {
 }
 
 html {
-  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
